<resources>
    <string name="app_name">Lab_2</string>

    // Activity: Main
    <string name="text_home">Welcome user!</string>
    <string name="btn_to_login">Go to login</string>

    // Activity: Login
    <string name="text_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="back">Back</string>
    <string name="create_a">Create a new account? Click</string>
    <string name="clickable_new_user">HERE</string>
    <string name="clickable_load_users">Load new users</string>
    <string name="clickable_print">Logcat Print</string>

    // Activity: Logged
    <string name="you_re_now_logged">You\'re now logged</string>
    <string name="logout">Logout</string>
    <string name="menu_log_out">Log Out</string>


    // Activity: New user
    <string name="text_new_user">Create new account</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    // Hints
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>

    // Fragments
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="textview">TextView</string>


</resources>